# stardew-minifier

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  publish.yml
src/: archive.rs  extract.rs  main.rs  minify.rs  models.rs
