[package]
name = "stardew-minifier"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
description = "Shrink Stardew Valley mod files by optimizing assets"

[dependencies]
anyhow = "1.0.75"
camino = "1.1.6"
clap = { version = "4.4.2", features = ["derive"] }
encoding_rs = "0.8.33"
ignore = "0.4.20"
indicatif = { version = "0.17.6", features = ["rayon"] }
json5 = "0.4.1"
oxipng = { version = "8.0.0", default-features = false }
quick-xml = "0.28.2"
rayon = "1.7.0"
serde_json = "1.0.105"
tar = { version = "0.4.40", default-features = false }
tempfile = "3.8.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
zstd = { version = "0.12.4", default-features = false }

[profile.release]
lto = true
strip = true
