[package]
name = "stardew-minifier"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
description = "Shrink Stardew Valley mod files by optimizing assets"

[dependencies]
anyhow = "1.0.80"
camino = "1.1.6"
clap = { version = "4.5.1", features = ["derive"] }
encoding_rs = "0.8.33"
ignore = "0.4.22"
indicatif = { version = "0.17.8", features = ["rayon"] }
json5 = "0.4.1"
oxipng = { version = "9.0.0", default-features = false }
quick-xml = "0.31.0"
rayon = "1.9.0"
serde_json = "1.0.114"
tar = { version = "0.4.40", default-features = false }
tempfile = "3.10.1"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
zstd = { version = "0.13.0", default-features = false }

[profile.release]
lto = true
strip = true
